Agregado título y descripción

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Empresa A</title>        
     </head>
     <body>
-        
+        <h1>Estudio Juridico</h1>
+        <p>Nuestra misión es defender los derechos de las personas</p>
     </body>
 </html>
