agregado hoja de estilos y cambiado fondo de pagina. añadida archivo js vacio

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Empresa A</title>        
+        <title>Empresa A</title>  
+        <link rel="stylesheet" href="css/style.css" type="text/css">              
     </head>
     <body>
         <h1>Estudio Juridico</h1>
