--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Estudio Juridico</h1>
         <p>Nuestra misión es defender los derechos de las personas</p>
+        <p>Párrago agregado<p>
     </body>
 </html>
