saludo javascript agregado

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Empresa A</title>  
-        <link rel="stylesheet" href="css/style.css" type="text/css">              
+        <link rel="stylesheet" href="css/style.css" type="text/css">
+        <script src="js/javascript.js"></script>            
     </head>
     <body>
         <h1>Estudio Juridico</h1>
         <p>Nuestra misión es defender los derechos de las personas</p>
         <p>Párrafo agregado<p>
+
+        <input type="button" onclick="saludo()" value="Dale ya!">
     </body>
 </html>
