--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
         <h1>Estudio Juridico</h1>
         <p>Nuestra misión es defender los derechos de las personas</p>
         <p>Párrafo agregado<p>
+
+
+
+        <p>Otro párrafo</p>
     </body>
 </html>
